@@ -108,6 +108,7 @@ AC_OUTPUT( \
   src/Makefile \
   src/bankdata/Makefile \
   src/bankdata/online_update.pl \
+  src/bankdata/bundesbank.sed \
   src/bin/Makefile \
   src/include/Makefile \
   src/lib/Makefile \
