@@ -1,3 +1,8 @@
+2005-03-17  Christian Stimming <stimming@tuhh.de>
+
+	* src/bankdata/bundesbank.sed.in: Use the SED variable from
+	configure time instead of fixed path.
+
 2005-03-01  Christian Stimming <stimming@tuhh.de>
 
 	* configure.in: Released version 1.3
